# galaxy-rs

./: AGENTS.md  Cargo.toml  DESIGN.md  ISSUES.md  PROJECT_SUMMARY.md  README.md  STATUS.md
.beads/: issues.jsonl
galaxy/: Cargo.toml
galaxy-core/: Cargo.toml
galaxy-core/src/: galaxy.rs  game_state.rs  init.rs  lib.rs  planet.rs  race.rs  racebot.rs  rendering.rs  ship.rs
galaxy-core/tests/: racebot_integration.rs
galaxy/src/: combat.rs  diplomacy.rs  galaxy.rs  game_state.rs  init.rs  lib.rs  main.rs  planet.rs  race.rs  racebot.rs  rendering.rs  ship.rs
galaxy/tests/: racebot_integration.rs
